{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 73,
  "lineage": "8ee1b7a4-da53-fae4-470f-1c39200e09b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AVG_Ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08962a4068733a2b6",
            "arn": "arn:aws:ec2:us-east-2:641456973426:instance/i-0af7f03fb9c453905",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af7f03fb9c453905",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "avgustKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08efcf27aeced26e6",
            "private_dns": "ip-10-0-1-30.us-east-2.compute.internal",
            "private_ip": "10.0.1.30",
            "public_ip": "18.191.181.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-039505abf22585358",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d603dbab42a62d14",
            "tags": {
              "Name": "AVG Ubuntu SG"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0594f0044c9507794"
            ]
          },
          "dependencies": [
            "aws_security_group.AVG_Ubuntu_SG",
            "aws_subnet.AVG_Ubuntu_SN",
            "aws_vpc.AVG_Ubuntu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "AVG_Ubuntu_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:641456973426:internet-gateway/igw-00eda6a2c2ae1829f",
            "id": "igw-00eda6a2c2ae1829f",
            "owner_id": "641456973426",
            "tags": {
              "Name": "AVG Ubuntu SG"
            },
            "vpc_id": "vpc-021ce09b7decab88c"
          },
          "dependencies": [
            "aws_vpc.AVG_Ubuntu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "AVG_Ubuntu_LAN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:641456973426:route-table/rtb-0b17e1d779beaf4b2",
            "id": "rtb-0b17e1d779beaf4b2",
            "owner_id": "641456973426",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00eda6a2c2ae1829f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AVG Ubuntu SG"
            },
            "vpc_id": "vpc-021ce09b7decab88c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.AVG_Ubuntu_IG",
            "aws_vpc.AVG_Ubuntu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AVG_Ubuntu_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0901e09a83c438b91",
            "route_table_id": "rtb-0b17e1d779beaf4b2",
            "subnet_id": "subnet-0d603dbab42a62d14"
          },
          "dependencies": [
            "aws_internet_gateway.AVG_Ubuntu_IG",
            "aws_route_table.AVG_Ubuntu_LAN",
            "aws_subnet.AVG_Ubuntu_SN",
            "aws_vpc.AVG_Ubuntu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AVG_Ubuntu_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:641456973426:security-group/sg-0594f0044c9507794",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0594f0044c9507794",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "AVG_Ubuntu_SG",
            "name_prefix": "",
            "owner_id": "641456973426",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AVG Ubuntu SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-021ce09b7decab88c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.AVG_Ubuntu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AVG_Ubuntu_SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:641456973426:subnet/subnet-0d603dbab42a62d14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d603dbab42a62d14",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "641456973426",
            "tags": {
              "Name": "AVG Ubuntu SG"
            },
            "tags_all": {
              "Name": "AVG Ubuntu SG"
            },
            "vpc_id": "vpc-021ce09b7decab88c"
          },
          "dependencies": [
            "aws_vpc.AVG_Ubuntu_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "AVG_Ubuntu_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:641456973426:vpc/vpc-021ce09b7decab88c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d414ed4617004d73",
            "default_route_table_id": "rtb-09f7b49ffd069e134",
            "default_security_group_id": "sg-0bf5a616e4e8d06c0",
            "dhcp_options_id": "dopt-9668f1fd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-021ce09b7decab88c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09f7b49ffd069e134",
            "owner_id": "641456973426",
            "tags": {
              "Name": "AVG_ubuntu_nginx"
            },
            "tags_all": {
              "Name": "AVG_ubuntu_nginx"
            }
          }
        }
      ]
    }
  ]
}